# medic-ai

./: .dockerignore  .gitignore  .readthedocs.yaml  404.html  AGENTS.md  CITATION.cff  CONTRIBUTION.md  Makefile  README.md  dummy.py  index.html  mkdocs.yml  overview.html  pyproject.toml  pytest.ini  requirements.txt  scratch_verifier.py  setup.py
.github/: FUNDING.yml
.github/workflows/: docs.yml
docker/: Dockerfile  Dockerfile-cpu
docs/: README.md  conf.py  general.md  index.md  requirements.txt
docs/_static/: custom.css  empty-objects.inv
docs/examples/: index.md  others.md  transformation.md
docs/getting_started/: index.md  installation.md  overview.md  quickstart.md
docs/guides/: data-preparation.md  example.md  index.md  losses.md  manage-guides.md  metrics.md  notebooks.md  transformations.md  utility.md
docs/misc/: contribution.md  faq.md
docs/models/: manage-models.md
docs/training/: manage-training.md
docs/transformations/: manage-transformations.md
eyenet/: __init__.py  cli.py
eyenet/cfg/: aptos.yml  chase_db1.yml  default.yml
eyenet/data/: __init__.py  aptos.py  common.py  eyepacs.py
eyenet/dataloader/: __init__.py  aptos.py  chase_db1.py  common.py  eyepacs.py
eyenet/layers/: __init__.py  attention.py  grad_accumulator.py
eyenet/losses/: __init__.py  kappa_loss.py
eyenet/metrics/: __init__.py  cohens_kappa.py
eyenet/net/: __init__.py  blocks.py  classifier.py
eyenet/nets/: __init__.py  blocks.py  classifier.py  duelattention.py  unet.py
eyenet/utils/: __init__.py  grad_accumulator.py
general/: index.html
guides/manage-guides/: index.html
inference/manage-inference/: index.html
medic/: __init__.py  cli.py
medic/cfg/: aptos.yml  chase_db1.yml  default.yml
medic/dataloader/: __init__.py  aptos.py  common.py
medic/layers/: __init__.py  attention.py  conv.py
medic/losses/: __init__.py  kappa_loss.py
medic/nets/: __init__.py  duelattention.py  unet.py
medic/utils/: __init__.py  model_utils.py
medicai/: __init__.py
medicai/blocks/: __init__.py  unet.py  unet_basic.py  unet_imagenet_decoder.py  unet_out.py  unet_residual.py  unetr.py  unetr_basic.py  unetr_plusplus.py  unetr_pr_up.py  unetr_up.py
medicai/callbacks/: sliding_window_callback.py
medicai/cfg/: aptos.yml
medicai/dataloader/: aptos.py  chase_db1.py  nifty.py
medicai/layers/: README.md  __init__.py  atrous_spatial_pyramid_pooling.py  attention.py  conv.py  decoder.py  densenet.py  mlp.py  (+6 more)
notebooks/: README.md  abdomen-nii-to-tfrecord.ipynb  brats-nii-to-tfrecord.ipynb  brats.multi-gpu.segment.ipynb  btcv.segment.ipynb  covid19.ct.classification.ipynb  covid19.ct.segment.ipynb  getting_started.ipynb  medicai-x-medmnist-starter-on-multi-class.ipynb  spleen.segment.ipynb  swinunetr_btcv_segmentation_3d.ipynb
search/: search_index.json
test/: conftest.py
tmp/: check_circular.py  nnunet_data_recap.md
(+369 files in other folders)
